stream z-index fix

--- a/static-src/sass/custom/_stream.scss
+++ b/static-src/sass/custom/_stream.scss
@@ -252,6 +252,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 1;
     @include breakpoint(medium) {
       width: 45%;
     }
